enter full rasha name on every pages

--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -1,9 +1,10 @@
 .list-div
   #welcom_pan  
     %h2.heading2 
-      ="مشتری جدید"
       %span 
-        = "راشا"        
+           ="مشتریان"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"       
     .show-list
       = render 'form'
     #quotPan
