--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -1,9 +1,10 @@
 .list-div
   #welcom_pan
     %h2.heading2 
-      ="مشتریان"
-      %span 
-        = "راشا"         
+      %span
+        ="مشتریان"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"      
     %p#notice= notice
     %h3.t= @customer.name
         
@@ -14,7 +15,7 @@
     -if is_admin?
       #quotPan 
         .footer_Link
-          = link_to content_tag("span", "اعمال تغییرات"), edit_customer_path(@customer)
+          = link_to content_tag("span", "ویرایش"), edit_customer_path(@customer)
           \|
           = link_to content_tag("span", "بازگشت"), customers_path
   
