--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -1,9 +1,9 @@
 .text-div
   #welcom_pan
     %h2.heading2
-      = "شرکت"
       %span 
-        = "راشا"         
+        #{GlobalConstant::COMANYـNAME}
+      ="راشا"
     %p.homepage 
       
     
