--- a/app/views/services/_form.html.haml
+++ b/app/views/services/_form.html.haml
@@ -8,7 +8,7 @@
   
   .field
     = f.label "عنوان خدمات "
-    = f.text_field :title
+    = f.text_field :title, :style => "width:250px; font-size:20px"
   
   .field
     = f.label "توضیحات"
