--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,9 +1,11 @@
 .list-div
   #welcom_pan
     %h2.heading2       
-      = @service.title
       %span 
-        = "راشا"       
+        ="خدمات"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"        
+       
 
     %h3.t= @service.title
     .clrear-float
@@ -21,8 +23,8 @@
     -if is_admin?
       #quotPan
         .footer_Link
-          = link_to 'اعمال تغییرات', edit_service_path(@service)
+          = link_to 'ویرایش', edit_service_path(@service)
           \|
           = link_to 'بازگشت', services_path
           \|
-          = link_to 'حذف خدمات', @service, method: :delete, data: { confirm: 'آیا میخواهید این خدمات را حذف کنید?'}
+          = link_to 'حذف ', @service, method: :delete, data: { confirm: 'آیا میخواهید این خدمات را حذف کنید?'}
