--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,12 +59,13 @@
 .clrear-float {clear:both}
 .tr {float:left; width:300px; height:300px; margin-left:10px; text-align:center; font-family:"Nazli"; font-size:16px;}
 .td {width:300px; margin:10px; text-align:center;font-family:"Nazli"; font-size:16px}
-.td div.pro-title {padding-top:10px;padding-bottom:10px;background:url(pat.png) repeat;font-family:"Nazli"; font-size:16px; color:#000; width:100%;}
+.td div.pro-title {padding-top:10px;padding-bottom:10px;background:url(pat.png) repeat;font-family:"Nazli"; font-size:16px; font-weight:bold; color:#000; width:100%;}
 .td a div.pro-title {margin-top:20px; text-decoration:none; font-family:"Nazli"; font-size:16px;}
 .tr:hover div.pro-title { background:url(slideBg1.png) repeat-x; color:#fff; font-family:"Nazli"; font-size:16px;} 
 .td:hover a {text-decoration:none; }
 .td a.color-green {color:#029743; }
 .show-des-en {width:100%; margin-top:60px;float:right; font-family:"Nazli"; font-size:16px}
+.show-des-en p {width:95%; margin-right:50px}
 
 .total-division {width:100%;}
 
