--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,9 +1,10 @@
 .list-div
   #welcom_pan   
     %h2.heading2
-      ="محصول جدید"
       %span 
-        = "راشا"        
+        ="محصولات"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"       
     .show-list
       = render 'form'
     #quotPan
