--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -1,9 +1,10 @@
 .list-div
   #welcom_pan
     %h2.heading2       
-      = "لیست خدمات"
       %span 
-        = "راشا"        
+        ="خدمات"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"        
     .show-list
       .table
         - @services.each do |service|
