--- a/app/views/services/new.html.haml
+++ b/app/views/services/new.html.haml
@@ -1,10 +1,10 @@
 .list-div
   #welcom_pan   
     %h2.heading2       
-      = "خدمات جدید"
       %span 
-        = "راشا"        
-    .show-list
+        ="خدمات"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"           .show-list
       = render 'form'
     #quotPan
       .footer_Link
