--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -16,15 +16,19 @@
         .clrear-float
       #head-menu
         %h1.logo                    
-        %ul
+        %ul          
           %li{:class => ('active' if current_page?( home_path)) }
+            %h3{:style => "height:60px"}
             = link_to "صفحه اصلی", home_path
           
           -Page.all.each do |page|  
             %li{:class => ('active' if current_page?(page_path(page)))    }
+              %h3{:style => "height:60px"}
               = link_to page.title, page_path(page)
           %li{:class => ('active' if current_page?(Service))    }
+            %h3{:style => "height:60px"}
             = link_to "خدمات", Service
           %li{ :class => ('active' if current_page?(Product))}
+            %h3{:style => "height:60px"}
             = link_to "محصولات", Product
         
