--- a/app/views/slides/edit.html.haml
+++ b/app/views/slides/edit.html.haml
@@ -1,9 +1,10 @@
 .list-div
   #welcom_pan   
     %h2.heading2       
-      = "اسلایدر"
       %span 
-        = "راشا"      
+        ="اسلایدر"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"        
     .show-list
       .form-holder    
         = form_for @slide, :html => {:multipart => true} do |f| 
