--- a/app/views/slides/new.html.haml
+++ b/app/views/slides/new.html.haml
@@ -1,9 +1,10 @@
 .list-div
   #welcom_pan   
     %h2.heading2       
-      = "اسلایدر"
       %span 
-        = "راشا"      
+        ="اسلایدر"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"       
     .show-list
       = render 'form'
       
