--- a/app/views/slides/show.html.haml
+++ b/app/views/slides/show.html.haml
@@ -1,9 +1,10 @@
 .list-div
   #welcom_pan   
     %h2.heading2       
-      = "اسلایدر"
       %span 
-        = "راشا"      
+        ="اسلایدر"
+        #{GlobalConstant::COMANYـNAME}
+      = "راشا"        
     %p#notice= notice
     = image_tag @slide.image(:gallery_size)
     .show-des-fa
