last edit: delete Rasha full name from all pages

--- a/app/views/pages/edit.html.haml
+++ b/app/views/pages/edit.html.haml
@@ -2,8 +2,9 @@
   #welcom_pan  
     %h2.heading2 
       %span 
-        = @page.title      
-        = "راشا"      
+        = @page.title"
+       
+ 
     .show-list
       = render 'form'
     #quotPan
