--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,7 +1,8 @@
 .list-div
   #welcom_pan
     %h2.heading2 
-    %span 
+    %span
+      ="صفحه"
         #{GlobalConstant::COMANYـNAME}
       ="راشا
     .show-list 
