--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,16 +1,16 @@
 .list-div
   #welcom_pan
     %h2.heading2
-      %span  
+      %span 
         = @page.title
-      = "راشا"         
+         
     %p#notice= notice
     .show-des-en
       =raw @page.page_html
     -if is_admin?
       #quotPan 
         .footer_Link
-          = link_to content_tag("span", "اعمال تغییرات"), edit_page_path(@page)
+          = link_to content_tag("span", "ویرایش"), edit_page_path(@page)
           \|
           = link_to content_tag("span", "بازگشت"), home_path
   
