--- a/app/views/services/new.html.haml
+++ b/app/views/services/new.html.haml
@@ -3,8 +3,8 @@
     %h2.heading2       
       %span 
         ="خدمات"
-        #{GlobalConstant::COMANYـNAME}
-      = "راشا"           .show-list
+      
+    .show-list
       = render 'form'
     #quotPan
       .footer_Link
