add message model & set contact form on contact page

--- a/app/views/pages/_form.html.haml
+++ b/app/views/pages/_form.html.haml
@@ -8,7 +8,7 @@
   
   .field
     = f.label "عنوان صفحه "
-    = f.text_field :title
+    = f.text_field :title, :disabled => (true if @page.read_attribute("title") == "تماس با ما")
   
   .field
     = f.label "متن صفحه"
