--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -39,6 +39,7 @@ background-color:#2D2D2D;
 -o-transition-timing-function: linear, ease-in;
 }
 #head ul li.active a {color:#7DDC1F;}
+
 #cu3er-container							{width:800px; height:360 px; float:left; outline:0; position:absolute; top:166px; left:0px; z-index:10}
 img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:200px}
 
@@ -84,19 +85,12 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
 #quotPan a {color:#5f5f5f; font-size:16px;}
 #quotPan a:hover {color:#029743}
 
-.btn							{width:auto; height:40px; color:#3B3B3B;margin-top:20px; font-family:"Nazli"; font-size:17px;font-weight:bold; text-align:center; cursor:pointer; border:0px; 
-background: #52af5c; /* Old browsers */
-background: -moz-linear-gradient(top,  #52af5c 1%, #cdeb8b 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#52af5c), color-stop(100%,#cdeb8b)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #52af5c 1%,#cdeb8b 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #52af5c 1%,#cdeb8b 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #52af5c 1%,#cdeb8b 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #52af5c 1%,#cdeb8b 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#52af5c', endColorstr='#cdeb8b',GradientType=0 ); /* IE6-9 */
+.btn							{width:auto; height:auto; color:#3B3B3B;margin-top:20px; font-family:"Nazli"; font-size:17px;font-weight:bold; text-align:center; cursor:pointer; border:0px; 
+ background:url(submit-btn.png) no-repeat;
 
 }
 
-.btn:hover					{   -moz-box-shadow: inset -4px 0px 1px #848484;-webkit-box-shadow: inset -4px 0px 1px #848484;box-shadow: inset -4px 0px 1px #848484;}
+.btn:hover					{   -moz-box-shadow: 1px 1px 2px #888888;-webkit-box-shadow: 1px 1px 2px #888888;box-shadow: 1px 1px 2px #888888;}
 a.btn {height:20px;}
 a.btn span{text-decoration:none; color:#3B3B3B; }
 
@@ -192,3 +186,18 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .cropFrame{width:966px; height:452px}
 
 
+.msg-div {width:50%; float:right}
+.msg-feild {width:400px; height:200px}
+.text-msg {margin-top:20px; width:90%; margin-right:10px}
+.notice-msg {color:#7ddc1f; font-size:18px;}
+.msg-form input {font-size:18px}
+.visit-msg {font-weight:bold;font-size:20px; color:#333}
+
+.show-list table {width:100%; margin-right:20px; font-family:Nazli, Helvetica, sans-serif; font-size:18px; color:#5f5f5f}
+.show-list table tr{width:100%; height:30px; font-weight:lighter;color:#5f5f5f}
+.show-list table tr.first-row{width:100%; height:30px; border-bottom:#c9c9c9 solid 1px; color:#333}
+.show-list table tr th a{text-decoration:none; color:#5f5f5f}
+.show-list table tr th {color:#5f5f5f}
+.show-list table tr.visit-msg th {color:#333}
+.show-list table tr.visit-msg th a{text-decoration:none; color:#333}
+.show-list table tr th.del-msg a{text-decoration:none; color:#7ddc1f; }
