--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -2,7 +2,7 @@
   #welcom_pan
     %h2.heading2 
       %span 
-        ="مشتریان"
+        ="شرکت های همکار"
          
     .show-list 
       .table        
