--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -2,7 +2,8 @@
   #welcom_pan  
     %h2.heading2 
       %span 
-        = "مشتریان"         
+        = "شرکت های همکار"
+  
     .show-list
       = render 'form'
     #quotPan
