--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -2,7 +2,7 @@
   #welcom_pan
     %h2.heading2 
       %span
-        ="مشتریان"
+        ="شرکت های همکار"
         
     %p#notice= notice
     %h3.t= @customer.name
