--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -21,34 +21,36 @@ div {
 
 
 #error_explanation {
-  
-  width: 400px;
- 
-  -moz-box-shadow:    1px 1px 3px 3px  #ccc;
-  -webkit-box-shadow: 1px 1px 3px 3px  #ccc;
-  box-shadow:         1px 1px 3px 3px  #ccc;
+  width: 400px; 
+  -moz-box-shadow:    1px 1px 3px 3px  red;
+  -webkit-box-shadow: 1px 1px 3px 3px  red;
+  box-shadow:         1px 1px 3px 3px  red;
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+  border-radius:4px;
   h2 {
-    
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
+    border-radius:4px;
+    opacity:.7; filter: alpha(opacity=70);
+    padding: 2px 2px 2px 2px;
     font-size: 16px;
     margin: -7px;
     margin-bottom: 0px;
     background-color: #c00;
-    color: #fff;
+    color: #fff;    
+    height:30px;
   }
   ul li {
     font-size: 16px;
-    list-style: square;
+    list-style: circle;
+    padding: 3px;
+    
   }
 }
-.field_with_errors {-moz-box-shadow:    1px 1px 3px 3px red;
-  -webkit-box-shadow: 1px 1px 3px 3px red;
-  box-shadow:         1px 1px 3px 3px red;
+.field_with_errors {-moz-box-shadow:    1px 1px 2px 2px red;
+  -webkit-box-shadow: 1px 1px 2px 2px red;
+  box-shadow:         1px 1px 2px 2px red;
   display: table;
   height:25px;
   input, textarea 
