--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     %title
       ایده پردازان هوشمند راشا  #{@head.fetch(:title, '') if @head}
     =stylesheet_link_tag "application", :media => "all"
+    =stylesheet_link_tag "http://www.font-api.ir/css/B Yekan={font-api.ir}.css", :media => "all"
     =favicon_link_tag 'favicon.png', rel:'shortcut icon', type: 'image/png'
     =javascript_include_tag "application"
     =csrf_meta_tags
