upload PDF_file for Service class

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -85,8 +85,8 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
 #quotPan a:hover {color:#029743}
 
 .btn							{width:auto; height:auto; margin-top:20px; font-size:17px; text-align:center; cursor:pointer; border:0px; 
-  background-color: #52B209;
-    background-image: linear-gradient(to bottom, #90ED25, #5FB337);
+  background-color: #CAE4B5;
+    background-image: linear-gradient(to bottom, #A7F64D, #5FB337);
     border-radius: 4px;
     color: #FFFFFF;
     font-size: 1em;
@@ -96,18 +96,19 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
     text-transform: uppercase;
     transition: all 0.3s ease 0s;}
 
-.actions input.btn							{width:113px; height:42px; margin-top:18px; font-size:17px;   text-align:center; cursor:pointer; border:0; background-color: #52B209;
-    background-image: linear-gradient(to bottom, #90ED25, #5FB337);
+.actions input.btn							{width:113px; height:auto; margin-top:18px; font-size:17px;   text-align:center; cursor:pointer; border:0; background-color: #CAE4B5;
+    background-image: linear-gradient(to bottom, #A7F64D, #5FB337);
     border-radius: 4px;
     color: #FFFFFF;
-    font-size: 1em;
+    font-size:16px;
+    
     letter-spacing: 1px;
     line-height: 1.8em;
     padding: 8px 20px;
     text-transform: uppercase;
     transition: all 0.3s ease 0s;}
-.actions input.btn:hover{    background: linear-gradient(to bottom, #94BB0F 0%, #19B408 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);}
-.btn:hover{    background: linear-gradient(to bottom, #72CF1A 0%, #19B408 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);}
+.actions input.btn:hover{    background: linear-gradient(to bottom, #A5FB54 0%, #3ABE2B 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);}
+.btn:hover{    background: linear-gradient(to bottom, #A5FB54 0%, #3ABE2B 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);}
 
 a.btn {height:20px;}
 a.btn span{text-decoration:none; color:#fff; }
@@ -129,7 +130,7 @@ a.btn span{text-decoration:none; color:#fff; }
 
 #service_pan								{width:100%; margin-top:20px;  }
 #service_pan ul								{width:100%; }
-#service_pan ul li							{ font-size:16px ;float:right;width:325px; height:120px; margin:0 30px;  border-bottom:#c9c9c9 solid 1px}
+#service_pan ul li							{ font-size:16px ;float:right;width:325px; height:150px; margin:0 30px;  border-bottom:#c9c9c9 solid 1px}
 /*#service_pan ul li:first-child				{border:0}
 */#service_pan ul li:hover					{background:#fbfbfb}
 #service_pan ul li h5						{width:100%; margin:10px 0 0 10px;  font-size:16px; color:#029743}
@@ -220,3 +221,4 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .show-list table tr.visit-msg th a{text-decoration:none; color:#333}
 .show-list table tr th.del-msg a{text-decoration:none; color:#7ddc1f; }
 span.Necessary {color:red; font-size:12px}
+.download-file {text-align:center;}
