--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -4,9 +4,7 @@
       %span 
         #{GlobalConstant::COMANYـNAME}
       ="راشا"
-    %p.homepage 
-      
-    
+    %p.homepage    
     %h3.heading3
       %span
         = "آموزش"
@@ -27,18 +25,22 @@
     #service_pan
       %ul
         -Service.all.each do |service|
-          %li                                        
+          %li
             %h5= service.title
             %p
               = truncate(strip_tags(service.description.gsub(/&nbsp;/i,"")), :length => 80)
-              =link_to  "دریافت فایل", service
+              - if service.pdf.present?
+                .download-file
+                  =link_to  (image_tag "pdf.png"), service.pdf.url
+                  %br
+                  =link_to  "دریافت فایل", service.pdf.url                
     .clrear-float  
     .rezomeh       
       - Customer.all.each do |customer| 
         .item-company
           .himg
             =image_tag customer.image(:small), :id => customer.id
-          %div.des-logo-company{:id => customer.id}= customer.name        
+          .des-logo-company{:id => customer.id}= customer.name        
   
   :javascript 
     $(".item").first().addClass("active");
