--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,7 +62,7 @@
 .show-list .field textarea {font-size:17px;}
 .index_slider {margin-top:100px; margin-bottom:20px; width:100%}
 .clrear-float {clear:both}
-.tr {float:left; width:300px; height:300px; margin-left:10px; text-align:centerfont-size:16px;}
+.tr {float:left; width:300px; height:300px; margin-left:10px; text-align:center; font-size:16px;}
 .td {width:300px; margin:10px; text-align:center; font-size:16px}
 .td div.pro-title {padding-top:10px;padding-bottom:10px;background:url(pat.png) repeat; font-size:16px; font-weight:bold; color:#000; width:100%;}
 .td a div.pro-title {margin-top:20px; text-decoration:none;  font-size:16px;}
