--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,9 +1,8 @@
-#foot
-  #foot_cen
-    .foot-logo      
-      %p.h6      
-        
-    .foot-link         
-      %p
-        Development by:
-        %a{href: "http://www.Raush.net", target: "_blank"} Raush.net
+#foot  
+  .foot-logo      
+    .h6
+  .clrear-float
+  .foot-link         
+    %p
+      Development by:
+      %a{href: "http://www.Raush.net", target: "_blank"} Raush.net
