--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -4,7 +4,8 @@
       %span 
         #{GlobalConstant::COMANYـNAME}
       ="راشا"
-    %p.homepage    
+    %p.homepage 
+       
     %h3.heading3
       %span
         = "آموزش"
@@ -18,40 +19,41 @@
               = truncate(strip_tags(product.description), :length => 80)
               =link_to "ادامه مطلب", product
     .clrear-float
-    %h3.heading3
-      %span 
-        = "خدمات"
-      =image_tag "services-icon.png"
-    #service_pan
-      %ul
-        -Service.all.each do |service|
-          %li
-            %h5= service.title
-            %p
-              = truncate(strip_tags(service.description.gsub(/&nbsp;/i,"")), :length => 80)
-              - if service.pdf.present?
-                .download-file
-                  =link_to  (image_tag "pdf.png"), service.pdf.url
-                  %br
-                  =link_to  "دریافت فایل", service.pdf.url                
+    -if Service.all.present?
+      %h3.heading3
+        %span 
+          = "خدمات"
+        =image_tag "services-icon.png"
+      #service_pan
+        %ul
+          -Service.all.each do |service|
+            %li
+              %h5= service.title
+              %p
+                = truncate(strip_tags(service.description.gsub(/&nbsp;/i,"")), :length => 80)
+                - if service.pdf.present?
+                  .download-file
+                    =link_to  (image_tag "pdf.png"), service.pdf.url, :target => "_blank"
+                    %br
+                    =link_to  "دریافت فایل", service.pdf.url, :target => "_blank"                
     .clrear-float  
     .rezomeh       
       - Customer.all.each do |customer| 
         .item-company
           .himg
             =image_tag customer.image(:small), :id => customer.id
-          .des-logo-company{:id => customer.id}= customer.name        
+            .des-logo-company{:id => customer.id}= customer.name        
   
-  :javascript 
-    $(".item").first().addClass("active");
-    $(".slide-indicator").first().addClass("active");
-    $('.carousel').carousel();
-      
-    $('.item-company').mouseover(function(){
-      $(this).children(".des-logo-company").css({"display":"block"});    
-    });
+:javascript 
+  $(".item").first().addClass("active");
+  $(".slide-indicator").first().addClass("active");
+  $('.carousel').carousel();
     
-    $('.item-company').mouseout(function(){
-      $(this).children(".des-logo-company").css({"display":"none"});    
-    });
-    
+  $('.item-company').mouseover(function(){
+    $(this).children(".des-logo-company").css({"display":"block"});    
+  });
+  
+  $('.item-company').mouseout(function(){
+    $(this).children(".des-logo-company").css({"display":"none"});    
+  });
+  
