delete product title of home page

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -101,7 +101,7 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
     border-radius: 4px;
     color: #FFFFFF;
     font-size:16px;
-    
+    font-family: B Yekan,'B Yekan',tahoma;
     letter-spacing: 1px;
     line-height: 1.8em;
     padding: 8px 20px;
