--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -2,7 +2,7 @@
   #welcom_pan
     %h2.heading2
       %span 
-        ="محصولات"
+        = "دوره های آموزشی"
     
     .show-list
       .table{:class => I18n.locale}
