--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -2,7 +2,7 @@
   #welcom_pan
     %h2.heading2
       %span 
-        ="محصولات"
+        = "دوره های آموزشی"
         
     %h3.t= @product.title
     .clrear-float
