--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -46,7 +46,7 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #content_cen								{width:800px; margin:0 auto}
 #content_sup								{width:800px; float:left; position:relative}
 
-#welcom_pan									{width:85%; margin-left:3%;margin-right:7%; margin-top:27px; float:left;  background:url(crosslines.png) no-repeat left 8px;}
+#welcom_pan									{width:85%; margin-left:3%;margin-right:7%; margin-top:27px; float:left;  background:url(crosslines.png) no-repeat left 8px; }
 #welcom_pan h2.heading2											{width:auto; margin-top:9px; font-size:20px; color:#029743; line-height:30px; letter-spacing:-1.7px}
 #welcom_pan h2.heading2 span										{color:#3b3b3b; text-transform:lettercase; margin-right:5px}
 #welcom_pan #quotPan a.brochure						{float:left; width:auto; height:54px; margin:15px 31px 0 15px ; padding:0 8px 0 0; font-size:16px; color:#ffffff; line-height:54px; background:url(buttonBg.png) no-repeat right -54px}
@@ -65,6 +65,35 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #welcom_pan h3.heading3								{ width:auto;  font-size:18px; color:#31a1ff;  line-height:60px; letter-spacing:-1.7px}
 #welcom_pan h3.heading3 span										{color:#3b3b3b; margin-right:0px}
 #welcom_pan h3.t								{float:righ; margin-top:60px; }
+#welcom_pan .main-box {direction:rtl;text-align:center; width:100%; border:red solid;}
+#welcom_pan .box {
+  width:30%;
+  height:300px;
+  direction:rtl;
+  overflow-y:scroll; 
+  margin:15px; 
+  float:right;  
+  border-radius:3px;   
+}
+#welcom_pan .box-new {width:30%;
+  height:300px;
+  direction:rtl;
+  overflow-y:scroll; 
+  margin:15px; 
+  float:right;  
+  border-radius:3px;   
+  -moz-box-shadow:    0px 0px 7px 0px #ccc;
+  -webkit-box-shadow: 0px 0px 7px 0px #ccc;
+  box-shadow:         0px 0px 7px 0px #ccc;
+  background:#6DF258}
+ 
+#welcom_pan .box .title-box {text-align:center; font-size:18px; font-weight:bold; border-bottom:#7F7F7F solid 1px; padding-bottom:3px; width:90%; margin-right:auto; margin-left:auto}
+#welcom_pan .box-new .title-box {text-align:center; font-size:18px; font-weight:bold; border-bottom:#7F7F7F solid 1px; padding-bottom:3px; width:90%; margin-right:auto; margin-left:auto}
+#welcom_pan .customers {font-size:16px; }
+#welcom_pan .customers .logo-img {float:right; margin:10px}
+#welcom_pan .news { font-size:16px; }
+#welcom_pan .Associates {font-size:16px;}
+
 
 ul#infoPan									{width:80%; float:left; margin-left:5%; margin-right:10%}
 ul#infoPan li								{width:430px; float:left; margin-left:5%; }
@@ -225,3 +254,5 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .show-list table tr th.del-msg a{text-decoration:none; color:#7ddc1f; }
 span.Necessary {color:red; font-size:12px}
 .download-file {text-align:center;}
+
+
