--- a/app/views/information/edit.html.haml
+++ b/app/views/information/edit.html.haml
@@ -2,10 +2,10 @@
   #welcom_pan   
     %h2.heading2
       %span 
-        ="شرکت های مشتری"
+        ="اخبار راشا"
          
     .show-list
       = render 'form'
     #quotPan
       .footer_Link
-        = link_to 'بازگشت', customers_path
+        = link_to 'بازگشت', information_index_path
