--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -12,4 +12,4 @@
             .td= link_to (image_tag product.pictures.first.image(:medium)), product
     -if is_admin?        
       #quotPan        
-        = link_to content_tag("span", "محصول جدید"), new_product_path, :class => "btn"
+        = link_to content_tag("span", "دوره آموزشی جدید"), new_product_path, :class => "btn"
