--- a/app/views/shared/_menu_bar.html.haml
+++ b/app/views/shared/_menu_bar.html.haml
@@ -7,7 +7,9 @@
           \|
           =link_to "اسلایدر", slides_path, :id => "admin-link", :class => ('active' if current_page?(slides_path))
           \|
-          =link_to "شرکت های همکار", customers_path, :id => "admin-link", :class => ('active' if current_page?(customers_path))
+          =link_to "شرکت های مشتری", customers_path, :id => "admin-link", :class => ('active' if current_page?(customers_path))
+          \|
+          =link_to "شرکت های همکار", associates_path, :id => "admin-link", :class => ('active' if current_page?(associates_path))
           \|
           =link_to "خروج", delete_session_path, :id => "admin-link", :class => ('active' if current_page?(home_path)) 
           \|
