--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -56,6 +56,7 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 
 #welcom_pan .details p {line-height:14px;padding:5px;margin-right:10px; width:90%;font-size:20px; color:#4d4d4d; line-height:18px;}
 #welcom_pan .details {float:right; width:55%; margin-top:10px; margin-right:10px}
+#welcom_pan .details .pdf-link {width:150px; text-align:center}
 #welcom_pan .sample-pic {float:right; width:40%; text-align:left; margin-top:10px}
 #welcom_pan p.homepage {margin:60px 5px 5px 30px}
 #welcom_pan .div_pic .td {width:90%; margin-right:15px;  font-size:16px;}
@@ -69,31 +70,85 @@ img.ban_bg									{width:auto; float:left; position:absolute; top:117px; right:
 #welcom_pan .box {
   width:30%;
   height:300px;
-  direction:rtl;
-  overflow-y:scroll; 
+  direction:rtl; 
   margin:15px; 
   float:right;  
   border-radius:3px;   
 }
 #welcom_pan .box-new {width:30%;
   height:300px;
-  direction:rtl;
-  overflow-y:scroll; 
+  direction:rtl;  
   margin:15px; 
   float:right;  
   border-radius:3px;   
   -moz-box-shadow:    0px 0px 7px 0px #ccc;
   -webkit-box-shadow: 0px 0px 7px 0px #ccc;
   box-shadow:         0px 0px 7px 0px #ccc;
-  background:#6DF258}
- 
+  background:#2D2D2D; color:#fff;
+  }
+#welcom_pan .box-new .title-box a.title-news{color:#7DDC1F}
+#welcom_pan .box-new .title-box a.title-news:hover{color:#BFBFBF}
+#welcom_pan .box-new .news .new-title{width:90%; margin:5px; margin-right:auto; margin-left:auto}
+#welcom_pan .box-new .news .new-title a{color:#BFBFBF; font-size:14px;}
+#welcom_pan .box-new .news .new-title a:hover{color:#029743; }
+
 #welcom_pan .box .title-box {text-align:center; font-size:18px; font-weight:bold; border-bottom:#7F7F7F solid 1px; padding-bottom:3px; width:90%; margin-right:auto; margin-left:auto}
 #welcom_pan .box-new .title-box {text-align:center; font-size:18px; font-weight:bold; border-bottom:#7F7F7F solid 1px; padding-bottom:3px; width:90%; margin-right:auto; margin-left:auto}
 #welcom_pan .customers {font-size:16px; }
-#welcom_pan .customers .logo-img {float:right; margin:10px}
+#welcom_pan .customers .logo-img 
+{
+  width:100px;
+  height:100px;
+  float:right; 
+  margin:10px; 
+  opacity:.7; 
+  filter:alpha(opacity=70); /* For IE8 and earlier */
+  }
+#welcom_pan .customers .logo-img:hover {float:right; margin:10px; opacity:1; filter:alpha(opacity=100); /* For IE8 and earlier */}
+#welcom_pan .logo-img:hover .des-logo-company {display:block}
+
+#welcom_pan .logo-img .des-logo-company {
+    background: #333333;
+    text-align:center;
+    color:#fff;
+    height: auto;
+    opacity: 0.7;
+    filter:alpha(opacity=70); /* For IE8 and earlier */
+    padding: 2px;
+    position:relative;
+    top: -19px;
+    width:100%;
+    display:none;   
+    font-size:16px;
+    font-weight:bold;
+}
+
+#welcom_pan .logo-img .des-logo-company p {
+    opacity: 1;
+    filter:alpha(opacity=100); /* For IE8 and earlier */
+    width:100%;
+}
+
+
 #welcom_pan .news { font-size:16px; }
 #welcom_pan .Associates {font-size:16px;}
+#welcom_pan .Associates .logo-img {
+  float:right; margin:10px; opacity:.7; filter:alpha(opacity=70); /* For IE8 and earlier */}
+#welcom_pan .Associates .logo-img:hover { opacity:1; filter:alpha(opacity=100); /* For IE8 and earlier */}
+#welcom_pan .show-news-list {width:100%; margin-right:auto; margin-left:auto; margin-top:10px;}
+#welcom_pan .show-news-list .news-table{
+  width:100%;
+  border-radius:5px;
+  border:#ccc solid 1px; 
+  text-align:center; 
+  margin-right:auto; 
+  margin-left:auto; 
+  margin-top:20px; 
+  min-height:200px;}
 
+#welcom_pan .show-news-list .news-table .first-row{font-weight:bold; margin:5px; width:100%; }
+#welcom_pan .show-news-list .news-table  .td {width:40%; float:right}
+#welcom_pan .show-news-list .news-table .rows .td.description {width:55%; font-size:14px }
 
 ul#infoPan									{width:80%; float:left; margin-left:5%; margin-right:10%}
 ul#infoPan li								{width:430px; float:left; margin-left:5%; }
@@ -136,11 +191,12 @@ ul#infoPan li p.descrip						{margin-top:13px; font-size:16px; line-height:16px;
     padding: 8px 20px;
     text-transform: uppercase;
     transition: all 0.3s ease 0s;}
-.actions input.btn:hover{    background: linear-gradient(to bottom, #A5FB54 0%, #3ABE2B 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);}
-.btn:hover{    background: linear-gradient(to bottom, #A5FB54 0%, #3ABE2B 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);}
+.actions input.btn:hover{ color:#4D4D4D;   background: linear-gradient(to bottom, #A5FB54 0%, #3ABE2B 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);}
+.btn:hover{ color:#4D4D4D;   background: linear-gradient(to bottom, #A5FB54 0%, #3ABE2B 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);}
 
 a.btn {height:20px;}
 a.btn span{text-decoration:none; color:#fff; }
+a.btn span:hover{text-decoration:none; color:#4D4D4D; }
 
 .foot-logo { width:100%;  margin-top:0px; height:auto; text-align:center }
 .foot-logo .h6{background:url(logoft.png) no-repeat; position:relative; height:150px; width:10%; margin-right:auto; margin-left:auto }
@@ -199,39 +255,25 @@ scrollbar-shadow-color: #fff; scrollbar-highlight-color: #fff;  width:100%; heig
 .enable_file_select {width:100px; height:130px; float:right; }
 
 .login-form {float:right;}
-.login-btn {margin-top:25px; height:30px; width:auto}
-
+input.login-btn {
+  margin-top:25px; height:30px; width:50px; color:#fff;
+ background-image: linear-gradient(to bottom, #A7F64D, #5FB337);
+    border-radius: 4px;
+    color: #FFFFFF;
+    font-size:16px;
+    font-family: B Yekan,'B Yekan',tahoma;
+    letter-spacing: 1px;
+    line-height: 1.8em;
+ }
+input.login-btn:hover { background: linear-gradient(to bottom, #A5FB54 0%, #3ABE2B 100%) repeat scroll 0 0 rgba(0, 0, 0, 0); color:#4D4D4D;}
 .lable {float:right; width:100px; margin-top:25px; margin-right:5px; margin-left:-20px}
 .customer-des {height:100px; width:250px}
-.c-logo {float:right}
 
 .rezomeh {height:200px; width:95%; margin-right:auto; margin-left:auto; margin-top:100px; text-align:center}
 .item-company {width:20%; height:auto; float:right; }
 
 .item-company span {margin-top:-20px; height:20px;  }
-.item-company .himg {height:auto; width:100%; text-align:center;}
-.item-company .himg:hover .des-logo-company {display:block}
 
-.des-logo-company {
-    background: #333333;
-    text-align:center;
-    color:#fff;
-    height: auto;
-    opacity: 0.7;
-    padding: 2px;
-    position:relative;
-    top: -19px;
-    width:100%;
-    display:none;
-   
-    font-size:16px;
-    font-weight:bold;
-}
-
-.des-logo-company p {
-    opacity: 1;
-    width:100%;
-}
 
 .form-holder {width:120%; height:auto; margin-right:-60px}
 .cropFrame{width:966px; height:452px}
