--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -8,8 +8,15 @@
     .description
       .details
         = raw @service.description
+        -if @service.pdf.url.present?
+          .pdf-link
+            =link_to @service.pdf.url, :target => "blank" do
+              =image_tag "pdf.png"
+              %br
+              دریافت فایل
       .sample-pic=link_to (image_tag @service.sample_picture.image(:large)), @service.sample_picture.image(:original), :"data-lightbox" => "image-1"     
       .clrear-float
+      
       .div_pic
         -@service.pictures.offset(1).each do |photo|
           .tr
