--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -13,6 +13,6 @@
           %span= text_field_tag :name, "",:class => "txt", :placeholder => "نام کاربری را وارد کنید"
           %span.lable=" رمز عبور:"
           %span= password_field_tag :password, "", {:class => "txt"}      
-          = submit_tag "ورود", {:class => "btn login-btn"}   
+          = submit_tag "ورود", {:class => "login-btn"}   
     
 
